# poo

./: README.md  coverage.html  coverage.tema1_main.cpp.html
.github/workflow/: main.yml
.github/workflows/: main.yml
tema1/: CMakeLists.txt  adresa.cpp  adresa.h  adresa_builder.cpp  adresa_builder.h  chirias.cpp  chirias.h  date_invalide.cpp  date_invalide.h  incapere.cpp  incapere.h  locatar.cpp  locatar.h  locuinta.cpp  locuinta.h  main.cpp  perioada.cpp  perioada.h  proprietar.cpp  proprietar.h
