cmake_minimum_required(VERSION 3.17)
project(tema1)

set(CMAKE_CXX_STANDARD 14)

add_executable(tema1 main.cpp incapere.cpp incapere.h adresa.cpp adresa.h perioada.cpp perioada.h locatar.cpp locatar.h proprietar.cpp proprietar.h chirias.cpp chirias.h locuinta.cpp locuinta.h adresa_builder.cpp adresa_builder.h date_invalide.cpp date_invalide.h)